2002-01-21  Richard Frith-Macdonald  <rfm@gnu.org>

	* Headers/Appkit/NSGraphicsContext.h: new method to slide image
	across screen between windows.
	* Source/NSGraphicsContext.m: dummy implementation
	* Source/NSWorkspace.m: Use new method.

Mon Jan 21 11:47:27 2002  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/NSMenuItem.m ([-setSubmenu:]): When raising an exception
	that the submenu already has a supermenu, print titles of both
	submenu and supermenu.  
	* Source/NSMenuItem.m: For the whole class: access variable
	_title.

2002-01-20  Richard Frith-Macdonald  <rfm@gnu.org>

	* Source/NSWindow.m: ([-sendEvent:]) check to see that an old drag
	view is still in the current window before sending a dragging message
	to it ... if it has been removed, don't send the message.

2002-01-20  Richard Frith-Macdonald  <rfm@gnu.org>

	* Source/NSWindow.m: ([-sendEvent:]) use ASSIGN() and DESTROY() to
	update _lastDragView so we don't run into problems if something
	deallocates it.  Added some debug logging.  Fixed bug in logic of
	drag entry/update.  Restructured a little to improve readability.

Thu Jan 17 18:16:08 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSTextView.m ([-_blink:]): Fixed declaration - should take
	a single NSTimer * argument.

Thu Jan 17 00:03:46 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSSlider.m ([-mouseDown:]): Do nothing if the slider is
	disabled.

Wed Jan 16 23:45:32 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSApplication.m (NSAbortModalException): Removed
	declaration - suggested by Stephen Brandon.

2002-01-15  Ludovic Marcotte  <ludovic@Sophos.ca>
	
	* Source/NSParagraphStyle.m ([NSParagraphStyle -encodeWithCoder:])
	fixed the index used for our locations and type arrays from
	count to it.

2002-01-15  Adam Fedor  <fedor@gnu.org>

	* Source/NSApplication.m (-finishLaunching): Make main menu key
	when there is no other key or main window.
	(-runModalSession:): Update main menu.