@@ -29,8 +29,8 @@
           <p>
           A string containing the name of the backend bundle to use
           for display specific GUI handling. The default is
-          "libgnustep-xgps.bundle". Currently the only other choice is
-          "libgnustep-xdps.bundle".
+          "libgnustep-xgps". Currently the only other choice is
+          "libgnustep-xdps".
           </p>
 	  </desc>
 	  <term>GSBrowserCellFontify</term>
